# mpris-chroma

./: README.md  install.sh  pyproject.toml  uninstall.sh
mpris_chroma/: apply.py  colors.py  coordinator.py  cover.py  select.py  state.py  sync.py  worker.py
systemd/: mpris-chroma.service
tests/: test_apply.py  test_bus.py  test_colors.py  test_coordinator.py  test_cover.py  test_decide.py  test_heartbeat_integration.py  test_lifecycle.py  test_mailbox.py  test_select.py  test_theme.py  test_vanish.py  test_worker.py  test_worker_integration.py
tools/: fake_mpris.py
